--- a/package.json
+++ b/package.json
@@ -3,12 +3,9 @@
   "version": "1.0.2",
   "description": "Uma forma mais simples de capturar entrada padrão do sistema(console/terminal).",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "repository": {
     "type": "git",
-    "url": "jhsdjsad"
+    "url": "https://github.com/Pedr0R0cha/prompt_terminal"
   },
   "keywords": [
     "prompt",
@@ -19,8 +16,5 @@
     "input."
   ],
   "author": "Igor Silva",
-  "license": "ISC",
-  "dependencies": {
-    "readme-md-generator": "^0.7.0"
-  }
+  "license": "ISC"
 }
